tests/baselines/reference/jsxFactoryQualifiedNameResolutionError.errors.txt
test.tsx(1,16): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
test.tsx(9,17): error TS2552: Cannot find name 'MyElement'. Did you mean 'Element'?


==== test.tsx (2 errors) ====
    declare module JSX {
                   ~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        interface IntrinsicElements {
            [s: string]: any;
        }
    }
    
    export class AppComponent {
        render(createElement) {
            return <div />;
                    ~~~
!!! error TS2552: Cannot find name 'MyElement'. Did you mean 'Element'?
!!! related TS2728 lib.dom.d.ts:--:--: 'Element' is declared here.
        }
    }